1. Метод .of [#340687]